fix: 修复人工对话的表现 BUG v1.0